deploy/fanclash-api/ingress_qa.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  #namespace: qa
  name: "fanclash-ingress"
  labels:
    app: "fanclash-api"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "true"

    # kubernetes.io/ingress.class: "alb"
    # alb.ingress.kubernetes.io/scheme: "internet-facing"
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:736790963086:certificate/15f645a7-3a81-4bc3-b9b1-77436d4d169a
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'

    # alb.ingress.kubernetes.io/healthcheck-path: "/"
    # alb.ingress.kubernetes.io/success-codes: "200,404,400"
spec:
  rules:
  - host: fanclash-api.staging.gamebuild.co
    http:
      paths:
        - path: /
          backend:
            serviceName: fanclash-api
            servicePort: 80

        - path: /api
          backend:
            serviceName: fanclash-api
            servicePort: 80

        - path: /api/ws
          backend:
            serviceName: fanclash-api-ws
            servicePort: 80
